--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </section>
     </aside>
     <!-- changed div to footer -->
-    <footer class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
