changed section HTML to article HTML in the main body

--- a/index.html
+++ b/index.html
@@ -30,33 +30,33 @@
     <div class="hero"></div>
     <!-- changed div to main -->
     <main class="content">
-        <!-- changed div to section -->
-        <section class="search-engine-optimization">
+        <!-- changed div to article -->
+        <article class="search-engine-optimization">
             <!-- added alt text to image -->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="an ariel view of a desk with a notebook, laptop, coffee and pens. On the notebook is a mind-map about search engine optimization." />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </section>
-        <!-- changed div to section -->
-        <section id="online-reputation-management" class="online-reputation-management">
+        </article>
+        <!-- changed div to article -->
+        <article id="online-reputation-management" class="online-reputation-management">
             <!-- added alt text to image -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="a laptop with graphical charts on it with the title 'reputation' at the top." />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </section>
-        <!-- changed div to section -->
-        <section id="social-media-marketing" class="social-media-marketing">
+        </article>
+        <!-- changed div to article -->
+        <article id="social-media-marketing" class="social-media-marketing">
             <!-- added alt text to image -->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left"  alt="an ariel view of people sitting around a table with their devices in front of them. On the table are coffee cups, various sized icons and word bubbles with different social media refernces and icons on them." />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </section>
+        </article>
     </main>
     <!-- changed div to aside  -->
     <aside class="benefits">
