changed div HTML and began README

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <!-- changed div to figure -->
+    <figure class="hero"></figure>
     <!-- changed div to main -->
     <main class="content">
         <!-- changed div to article -->
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <!-- added alt text to image -->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="an ariel view of a desk with a notebook, laptop, coffee and pens. On the notebook is a mind-map about search engine optimization." />
             <h2>Search Engine Optimization</h2>
